--- a/tugas-5.html
+++ b/tugas-5.html
@@ -36,6 +36,6 @@
         untuk informasi selengkapnya tentang kampusku, dapat browsing pada link 
         google disamping ini. <a href="https://um-sorong.ac.id/">google</a> 
     </p>
-    <p>Silahkan Hubungi saya jika ada yang ingin didiskusikan <a href="mailto:syahrunfacrezy@gmail.com@gmail.com">email</a></p>
+    <p>Silahkan Hubungi saya jika ada yang ingin didiskusikan <a href="mailto:tivaninrzq@yahoo.com">email</a></p>
 </body>
 </html>
